Initial POC of Thunderbird Extension sending an e-mail to TriliumNext At this point, POC has not removed any of the existing functionality and still requires Obsidian to successfully finish execution.
There are also new options in the configuration for the extension that accept values for the ETAPI token. TriliumNext needs to be open to be open to receive the e-mail.

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -31,7 +31,8 @@
         "storage",
         "menus",
         "downloads",
-        "notifications"
+        "notifications",
+        "<all_urls>"
     ],
     "icons": {
         "64": "images/obsidian-icon-64px.png",
