--- a/source/manifest.json
+++ b/source/manifest.json
@@ -7,7 +7,7 @@
     "author": "0xBismarck",
     "browser_specific_settings": {
         "gecko": {
-            "id": "TriliumClipper@0xBismarck.com",
+            "id": "TriliumClipper@TriliumNext.com",
             "strict_min_version": "78.0"
         }
     },
