--- a/source/manifest.json
+++ b/source/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "TriliumClipper",
     "description": "A Thunderbird extension to clip messages to the TriliumNext notetaking application.",
-    "version": "0.0.1",
+    "version": "0.9.0-beta",
     
     "author": "0xBismarck",
     "browser_specific_settings": {
